# ren

./: .example.env  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FULL_AUDIT.md  MOBILE_BUILD.md  PR_DRAFT.md  README.md  SECURITY.md  SECURITY_REMEDIATION_PLAN.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
Ren-SDK/: .gitignore  Cargo.toml  LICENSE  README.md  build.macos.sh  build.sdk.ps1  build.sdk.sh  build.sh  build.windows.ps1  cbindgen.toml
Ren-SDK/src/: crypto.rs  ffi.rs  lib.rs  mod.rs  wasm.rs
Ren-SDK/src/ratchet/: chain.rs  crypto_provider.rs  dh_ratchet.rs  mod.rs  session.rs  symmetric_ratchet.rs
Ren-SDK/src/x3dh/: bundle.rs  identity.rs  mod.rs  protocol.rs
apps/flutter/: README.md  analysis_options.yaml  pubspec.yaml
backend/: .gitignore  Cargo.toml  specification.md
backend/migrations/: 20251223194216_BD.sql  20260103211500_media_files.sql  20260107074600_message_reply_forward_delete.sql  20260108060000_chat_favorites.sql  20260117140000_client_message_id.sql  20260207033000_chat_keys_and_channels.sql  20260213090000_auth_sessions.sql  20260219120000_auth_sessions_sdk_fingerprint.sql  20260222090000_channels_and_roles.sql  20260222103000_message_delivery.sql  20260222114500_message_delivery_indexes.sql  20260222120000_add_nickname.sql  20260222153000_chat_avatar.sql  20260223100000_anti_replay.sql  20260223120000_key_auth.sql  20260226120000_drop_auth_sessions_sdk_fingerprint.sql  20260301090000_signal_bundle_columns.sql  20260301_x3dh_prekeys.sql  20260302100000_user_key_signature.sql  20260302120000_signal_state_backup.sql  20260302_double_ratchet_messages.sql  20260327120000_signal_registration_id.sql
backend/src/: main.rs
backend/src/middleware/: mod.rs  rate_limit.rs
backend/src/models/: auth.rs  chats.rs  mod.rs  prekeys.rs
backend/src/route/: auth.rs  chats.rs  keys.rs  media.rs  mod.rs  users.rs  ws.rs
docs/: E2EE_RUNBOOK.md  MESSAGE_FLOW_GAP_MAP.md  e2ee_media_self_readability_fix.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: intro.md
docs/security/: P0-4_Double_Ratchet_Plan.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  specification.md
nginx/: nginx.conf  options-ssl-nginx.conf
scripts/: build-ios.sh  build-linux.sh  build-macos.sh  build-windows.sh  build.sh  common.sh  dev.ps1  dev.sh  run-ios-release-with-sdk.sh  run-ios.sh  run-linux.sh  run-macos.sh  run-windows.sh  run.sh  update_repo.sh
(+199 files in other folders)
