[package]
name = "ren-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Taiidzy <taiidzy@yandex.ru>"]
description = "Ren-SDK — cross-platform E2EE messenger core (Rust)"
license = "MIT"

[lib]
name = "ren_sdk"
path = "src/lib.rs"
crate-type = ["staticlib"] # "staticlib" "cdylib", "rlib", 

[features]
default = ["crypto", "wasm", "ffi"]
crypto = ["x25519-dalek", "chacha20poly1305", "hkdf", "sha2", "pbkdf2"]
ffi = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
getrandom = "0.2"
serde-wasm-bindgen = "0.6"

# Crypto dependencies
x25519-dalek = { version = "2.0", optional = true, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[package.metadata.wasm-pack]
wasm-opt = false